--- a/jmeter.env.sample
+++ b/jmeter.env.sample
@@ -24,3 +24,11 @@ WMS_BBOX=-40,-20,-39,-19
 WMS_WIDTH=800
 WMS_HEIGHT=600
 WMS_FORMAT=image/png
+
+# BASIC AUTH
+AUTH_USER=admin
+AUTH_PASS=admin123!
+
+# Certbot / HTTPS
+CERTBOT_DOMAIN=DOMAIN
+CERTBOT_EMAIL=admin@DOMAIN
