--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,12 @@
+worker_processes auto;
+
 events {}
 
 http {
 
+  ##
+  # HTTP - usado pelo Certbot
+  ##
   server {
     listen 80;
     server_name ide4.geobases.es.gov.br;
@@ -15,6 +20,9 @@ http {
     }
   }
 
+  ##
+  # HTTPS
+  ##
   server {
     listen 443 ssl;
     server_name ide4.geobases.es.gov.br;
@@ -23,6 +31,17 @@ http {
     ssl_certificate_key /etc/letsencrypt/live/ide4.geobases.es.gov.br/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+
+    ##
+    # Security headers (opcional, mas recomendado)
+    ##
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-XSS-Protection "1; mode=block";
 
     location /reports/ {
       root /usr/share/nginx/html;
