--- a/jmeter/Dockerfile
+++ b/jmeter/Dockerfile
@@ -1,8 +1,7 @@
 FROM alpine:3.20
 
 # Instala Java + JMeter
-RUN apk update && \
-    apk add --no-cache openjdk17 wget unzip bash && \
+RUN apk add --no-cache openjdk17 wget unzip bash && \
     mkdir -p /opt/jmeter && \
     wget https://dlcdn.apache.org/jmeter/binaries/apache-jmeter-5.6.3.tgz -O /tmp/jmeter.tgz && \
     tar -xzf /tmp/jmeter.tgz -C /opt/jmeter --strip-components=1 && \
@@ -11,11 +10,11 @@ RUN apk update && \
 ENV JMETER_HOME=/opt/jmeter
 ENV PATH="$PATH:$JMETER_HOME/bin"
 
-# Diretórios usados pelos volumes
+# Diretórios
 RUN mkdir -p /tests-plans /scripts /reports /tests/data
 
-# Scripts
-COPY scripts/ /scripts/
+# Scripts JMeter
+COPY jmeter/scripts/ /scripts/
 RUN chmod -R 755 /scripts
 
 WORKDIR /tests
