update wms_test.jmx para teste em camada específica

--- a/jmeter.env.sample
+++ b/jmeter.env.sample
@@ -3,6 +3,26 @@ PROTOCOL=https
 HOST=geonode.url.com
 PORT=443       # leave blank or remove if using default
 
+# WMS
+WMS_PATH=/geoserver/geonode/wms
+WMS_VERSION=1.1.0
+WMS_LAYER=geonode:CAMADA
+WMS_SRS=EPSG:31984
+WMS_FORMAT=image/png
+
+# Imagem
+WMS_WIDTH=730
+WMS_HEIGHT=768
+
+# BBOX base
+WMS_BBOX_MINX=214336.35
+WMS_BBOX_MINY=7642099.96
+WMS_BBOX_MAXX=426398.98
+WMS_BBOX_MAXY=7865160.60
+
+# Randomização
+WMS_BBOX_OFFSET=20000
+
 # Load params
 USERS=10
 RAMPUP=30
@@ -17,13 +37,13 @@ UPLOAD_ENDPOINT=/api/uploads/         # endpoint relative ao HOST
 UPLOAD_FILE=/tests/data/sample.zip    # caminho dentro do container (montado)
 UPLOAD_FORM_FIELD=base_file
 
-# OGC specifics
-LAYER_NAME=workspace:layer
-CSW_COLLECTION=metadata_record
-WMS_BBOX=-40,-20,-39,-19
-WMS_WIDTH=800
-WMS_HEIGHT=600
-WMS_FORMAT=image/png
+## OGC specifics
+#LAYER_NAME=workspace:layer
+#CSW_COLLECTION=metadata_record
+#WMS_BBOX=-40,-20,-39,-19
+#WMS_WIDTH=800
+#WMS_HEIGHT=600
+#WMS_FORMAT=image/png
 
 # BASIC AUTH
 AUTH_USER=admin
